--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,18 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Montserrat:wght@400;700&family=Open+Sans:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/1f28b64665.js" crossorigin="anonymous"></script>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script
+      src="https://kit.fontawesome.com/1f28b64665.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>NaN · Not a Name - Awesome profile cards generator</title>
   </head>
